[gd_scene load_steps=3 format=3 uid="uid://b4uhany0u32p5"]

[ext_resource type="Script" uid="uid://huiybrknlxs1" path="res://Scripts/HUD.gd" id="1_sd512"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8b7j0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_sd512")

[node name="FPSLabel" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.963542
anchor_top = 0.0138889
anchor_right = 0.989583
anchor_bottom = 0.0462963
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 25
text = "60"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseMenu"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ResumeButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.929412, 0.690196, 0.4, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/hover = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/normal = SubResource("StyleBoxFlat_8b7j0")
text = "RESUME"

[node name="OptionsButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.929412, 0.690196, 0.4, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/hover = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/normal = SubResource("StyleBoxFlat_8b7j0")
text = "OPTIONS"

[node name="MainMenuButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.929412, 0.690196, 0.4, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/hover = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/normal = SubResource("StyleBoxFlat_8b7j0")
text = "MAIN MENU"

[node name="CloseButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.929412, 0.690196, 0.4, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/hover = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8b7j0")
theme_override_styles/normal = SubResource("StyleBoxFlat_8b7j0")
text = "QUIT"

[connection signal="focus_entered" from="PauseMenu/Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_focus_entered"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
